src-ken&y/objects/Company_Group__c.object
<CustomObject>
    <customHelpPage>Help_CompanyGroup</customHelpPage>
    <description>Stores the ids of the groups against the type(name) of the groups associated with the company.</description>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The company to which the group belongs to.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Company Groups (Company)</relationshipLabel>
        <relationshipName>Company_Group</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility to which the group belongs to.</description>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Company Groups</relationshipLabel>
        <relationshipName>Company_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>The unique key that prevents duplicate company groups from getting created. This is not editable.</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Public_Group_Id__c</fullName>
        <description>Stores the Id of the public group created.</description>
        <label>Public Group Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the company group.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Facility__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>